--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -21,6 +21,8 @@
 !binary "ZmxvMy9pbmRleC5wbmc=": flo3-a5784a21bf4ab5479988243bf99097cb.png
 !binary "ZmxvMzMucG5n": flo33-b95183b5b3ced3bf1677d24f804a98d8.png
 !binary "ZmxvMzMvaW5kZXgucG5n": flo33-b95183b5b3ced3bf1677d24f804a98d8.png
+!binary "Z2lybHN1cmYuanBn": girlsurf-3338ddde52f28d7425a2a2548b568fe6.jpg
+!binary "Z2lybHN1cmYvaW5kZXguanBn": girlsurf-3338ddde52f28d7425a2a2548b568fe6.jpg
 !binary "aW0ucG5n": im-7586761c7b07d33cf81b326b1b5d377c.png
 !binary "aW0vaW5kZXgucG5n": im-7586761c7b07d33cf81b326b1b5d377c.png
 !binary "aW0yLnBuZw==": im2-b448090434df6fb28920a1cef5025d3b.png
@@ -43,6 +45,8 @@
 !binary "c3RyL2luZGV4LnBuZw==": str-92146dcea420093b3b13bdfc7edbeb45.png
 !binary "dHR0Mi5qcGc=": ttt2-3d6757a392a2b54c9f14575491ed107f.jpg
 !binary "dHR0Mi9pbmRleC5qcGc=": ttt2-3d6757a392a2b54c9f14575491ed107f.jpg
+!binary "dHR3LnBuZw==": ttw-554393b242bccf378d7c5d59d6cba720.png
+!binary "dHR3L2luZGV4LnBuZw==": ttw-554393b242bccf378d7c5d59d6cba720.png
 !binary "dHVtYmxyLnBuZw==": tumblr-fbe0bf567c33814bf3b19fffcb951b4f.png
 !binary "dHVtYmxyL2luZGV4LnBuZw==": tumblr-fbe0bf567c33814bf3b19fffcb951b4f.png
 !binary "dHdpdHRlci5wbmc=": twitter-f41a529657db8187b7533ad8d518d85d.png
@@ -55,8 +59,8 @@
 !binary "d3QvaW5kZXgucG5n": wt-dff45af792141f250cc7af2852fe5a28.png
 !binary "YXBwbGljYXRpb24uanM=": application-3565fde74ebe560977179315290cfb19.js
 !binary "YXBwbGljYXRpb24vaW5kZXguanM=": application-3565fde74ebe560977179315290cfb19.js
-!binary "YXBwbGljYXRpb24uY3Nz": application-41c063626dbaa88457c44d228b7162d8.css
-!binary "YXBwbGljYXRpb24vaW5kZXguY3Nz": application-41c063626dbaa88457c44d228b7162d8.css
+!binary "YXBwbGljYXRpb24uY3Nz": application-dd5b9355d7f3bcb52478c07e7b5c9af2.css
+!binary "YXBwbGljYXRpb24vaW5kZXguY3Nz": application-dd5b9355d7f3bcb52478c07e7b5c9af2.css
 !binary "anF1ZXJ5Lm1pbi5tYXA=": jquery.min-959a5819c76e1508f5a8655c289c0de8.map
 !binary "anF1ZXJ5L2luZGV4Lm1pbi5tYXA=": jquery.min-959a5819c76e1508f5a8655c289c0de8.map
 glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
